--- a/templates/index.html
+++ b/templates/index.html
@@ -88,14 +88,14 @@
 
         <!-- MAIN -->
         <main class="mt-6 ml-4">
-            <div class="mb-6 bg-gray-100/50 p-4 max-w-fit rounded-md">
-                <h1 class="text-3xl text-white font-bold">Dashboard</h1>
-                <ul class="flex space-x-2 text-white ">
+            <div class="mb-6 p-4 max-w-fit rounded-md justify-center mx-auto">
+                <h1 class="text-4xl text-white font-bold">Dashboard</h1>
+                <ul class="flex space-x-2 text-white justify-center mx-auto">
                     <li>visitor link reclea</li>
                 </ul>
             </div>
 
-            <div class="m-4 ml-0 text-white font-bold">
+            <div class="m-4 mt-10 ml-0 text-white font-bold underline p-2">
                 <h2>Total Performance :</h2>
             </div>
 
