--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
 
         <!-- MAIN -->
         <main class="mt-6 ml-2 md:ml-4">
-            <div class="mb-6 p-4 max-w-fit rounded-md justify-center mx-auto">
+            <div class="mb-6 p-4 pt-8 max-w-fit rounded-md justify-center mx-auto ">
                 <h1 class="text-4xl text-white font-bold">Dashboard</h1>
                 <ul class="flex space-x-2 text-white justify-center mx-auto">
                     <li>visitor link reclea</li>
