--- a/static/output.css
+++ b/static/output.css
@@ -849,6 +849,10 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-\[10px\] {
   border-radius: 10px;
 }
@@ -1391,20 +1395,12 @@ video {
     margin-top: 1rem;
   }
 
-  .sm\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
   .sm\:h-\[5px\] {
     height: 5px;
   }
 
   .sm\:max-w-32 {
     max-width: 8rem;
-  }
-
-  .sm\:pt-8 {
-    padding-top: 2rem;
   }
 }
 
