--- a/templates/view.html
+++ b/templates/view.html
@@ -69,12 +69,19 @@
         class="flex flex-col fixed top-0 pt-8 left-0 w-72 h-full bg-gradient-to-tl from-black via-gray-900 to-black z-50 transition-all duration-300 hidden md:flex">
         <ul class="space-y-4">
             <li>
-                <div class="mb-auto flex justify-center">
-                    <img src="/static/img/logobar.png" alt="logo reclea" class="w-28 h-auto mb-4">
+                <div class="mb-auto flex flex-row justify-center gap-4">
+                    <img src="/static/img/logobar.png" alt="logo reclea" class="w-32 h-auto mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 512 512" viewBox="0 0 512 512"
+                        id="x" width="100" height="100">
+                        <polygon
+                            points="500.899 1 406.611 1 256 195.209 105.389 1 11.101 1 208.856 256 11.101 511 105.389 511 256 316.791 406.611 511 500.899 511 303.144 256"
+                            fill="white"></polygon>
+                    </svg>
+                    <img src="/static/img/NinjaFlylogo.png" alt="logo ninja" class="w-28 h-28">
                 </div>
             </li>
             <li class="px-4 py-2  hover:bg-gray-200 shadow-md bg-gray-600 group ">
-                <a href="/" class="flex items-center text-white space-x-2 group-hover:text-black">
+                <a href="/visitor" class="flex items-center text-white space-x-2 group-hover:text-black">
                     <i class='bx bxs-dashboard group-hover:text-black'></i>
                     <span class="group-hover:text-black">Dashboard</span>
                 </a>
@@ -87,7 +94,7 @@
             </li>
         </ul>
         <div class="mt-auto -mb-6 flex justify-center">
-            <img src="/static/img/NinjaFlylogo.png" alt="logo ninja" class="w-28 h-28">
+            <!-- <img src="/static/img/NinjaFlylogo.png" alt="logo ninja" class="w-28 h-28"> -->
         </div>
         <a href="https://www.instagram.com/ninjafly.id/" class="flex justify-center items-center space-x-2">
             <span class="font-bold hover:border hover:border-red-500 text-white">Ninjafly</span>
