--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <ul class="flex flex-col gap-8 p-5 mt-12">
                     <li href="" class="relative group">
-                        <a href="/"
+                        <a href="/visitor"
                             class="font-semibold text-stone-300 group-hover:text-stone-200 text-xl duration-300">
                             DASHBOARD
                         </a>
@@ -239,13 +239,13 @@
                     <!-- Div di kiri -->
                     <div id="left" class="relative p-4 rounded-lg bg-zinc-100 h-full flex flex-col">
                         <div class="flex flex-col-2 justify-evenly">
-                            <h2 class="text-black text-lg font-semibold ml-2 mb-4">Jumlah Klik </h2>
+                            <h2 class="text-black text-lg font-semibold ml-2 mb-4">Jumlah Klik Pada : </h2>
                             <input type="text" id="datepicker" class="mb-4 p-2 rounded-lg border border-gray-300 w-1/2">
                         </div>
 
                         <canvas id="dateChart" class="w-full h-full"></canvas>
-                        <h2 class="text-black text-lg font-semibold ml-2 mb-4">Total Klik :</h2>
-                        <div id="dateList" class="list-container">
+                        <h2 class="text-black text-lg font-semibold  mt-4">Total Klik :</h2>
+                        <div id="dateList" class="list-container ml-4">
                             <ul>
                                 <li>Instagram : </li>
                                 <li>WhatsApp : </li>
@@ -263,7 +263,7 @@
                     <!-- Div di kanan -->
                     <div id="chart"
                         class="relative p-4 ml-0 lg:ml-4 sm:mt-4 md:mt-0 bg-zinc-100 shadow rounded-lg h-full flex flex-col">
-                        <div class="flex justify-center">
+                        <div class="flex justify-center mb-4">
                             <button type="button" id="dayButton"
                                 class="text-white bg-[#050708] hover:bg-[#050708]/90 focus:ring-4 focus:outline-none focus:ring-[#050708]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#050708]/50 dark:hover:bg-[#050708]/30 me-2 mb-2">
                                 Hari Ini
@@ -280,8 +280,8 @@
                         <canvas id="dailyChart" class="w-full h-full" style="display: none;"></canvas>
                         <canvas id="weeklyChart" class="w-full h-full"></canvas>
                         <canvas id="monthChart" class="w-full h-full" style="display: none;"></canvas>
-                        <h2 class="text-black text-lg font-semibold ml-2 mb-4">Total Klik :</h2>
-                        <div id="dayList" class="list-container" style="display: none;">
+                        <h2 class="text-black text-lg font-semibold  mt-4">Total Klik :</h2>
+                        <div id="dayList" class="list-container ml-4" style="display: none;">
                             <ul>
                                 <li>Instagram : </li>
                                 <li>WhatsApp : </li>
@@ -294,7 +294,7 @@
                                 <li>Website : </li>
                             </ul>
                         </div>
-                        <div id="weekList" class="list-container">
+                        <div id="weekList" class="list-container ml-4">
                             <ul>
                                 <li>Instagram : </li>
                                 <li>WhatsApp : </li>
@@ -307,7 +307,7 @@
                                 <li>Website : </li>
                             </ul>
                         </div>
-                        <div id="monthList" class="list-container" style="display: none;">
+                        <div id="monthList" class="list-container ml-4" style="display: none;">
                             <ul>
                                 <li>Instagram : </li>
                                 <li>WhatsApp : </li>
@@ -872,7 +872,7 @@
                             data.tiktok
                         ],
                         plotOptions: {
-                            pie: {
+                            donut: {
                                 expandOnClick: false
                             }
                         },
